--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4888,4 +4888,13 @@ We kunnen ook paarsgewijze verschillen tussen de jaren berekenen zoals bij de tr
 
 ## Discussie
 
+**Visibiliteit**  
+- visibiliteit verschilt van plot tot plot
+- we willen niet extrapoleren naar de volledige plot als een deel niet kan gezien worden (bv omdat er huizen staan of een stuk bos)
+- niet mogelijk met conventional distance sampling: assumptie uniforme verdeling van dieren  
 
+Stel dat we nu de detectiefunctie laten afhangen van visibiliteit. 
+Hoe lager de visibiliteit, hoe lager de detectiekans.
+Dat wil zeggen dat we voor een lagere visibiliteit gaan overcompenseren voor gemiste dieren ten opzichte van hogere visibiliteit. Stel dat we een plot hebben waarbij 30% visibiliteit is verloren door een bos/huizen.
+De detectiekans zal lager zijn voor deze plot, maar dat wil zeggen dat we hierdoor juist sterker gaan compenseren.
+Stel dat we bij de huizen maar 1 vogel zien, maar de detectiekans is ook super laag, zal het "model" daar juist voor compenseren en bv. zeggen dat er in werkelijkheid 10 zitten, terwijl dat waarschijnlijk niet realistisch is. Het probleem is dat we de assumptie van uniforme verdeling schaden want in de 30 % bos/huizen zitten niet evenveel dieren als in de 70% akker. Of je detectiekans nu laag of hoog is, ze zal compenseren zodat de volledige abundantie is geschat over de plot. Dingen als bos, huizen ... zijn belangrijke elementen in het Vlaamse landschap dus ervan uitgaan dat de dieren uniform verdeeld zijn in plots waar er overlap is met dergelijke elementen zou de impact van bos, huizen ... op densiteiten van akkervogels verwaarlozen.
