change some layout in text

--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4319,7 +4319,7 @@ df_territoria_lang <- rbind(df_territoria_2018, df_territoria_2019,
 
 ### Resultaten
 
-In totaal hadden we `r nrow(df_territoria_lang)` observaties (waarneming van een bepaald individu in een plot in een bepaalde telperiode in een bepaald jaar). Nu hebben we `r length(unique(df_territoria_lang$cluster))` clusters (= broedparen). We vergelijken het aantal territoria met het gemiddelde en maximum over de telperiodes per plot per jaar. Bij deze laatste is ook met absensies rekening gehouden (maakt voor maximum niet uit). Voor het 
+In totaal hadden we `r nrow(df_territoria_lang)` observaties (waarneming van een bepaald individu in een plot in een bepaalde telperiode in een bepaald jaar). Nu hebben we `r length(unique(df_territoria_lang$cluster))` clusters (= broedparen). We vergelijken het aantal territoria met het gemiddelde en maximum over de telperiodes per plot per jaar. Bij deze laatste is ook met absensies rekening gehouden (maakt voor maximum niet uit).
 
 ```{r}
 # Bereken aantal plots per regio per jaar
@@ -4895,7 +4895,7 @@ Er zijn nog een aantal discussiepunten:
 **Mismatch afstanden**  
 De herberekende afstanden komen niet overeen met de afstanden meegekregen door SOVON. Link met volgende punt?
   
-**Probleem met inladen data 2022**
+**Probleem met inladen data 2022**  
 Zie begin code. Zelfde plots hebben verschillende variabelen (sbp, openheid) 2022 vs 2018-2021?
   
 **Visibiliteit**  
@@ -4909,7 +4909,7 @@ Dat wil zeggen dat we voor een lagere visibiliteit gaan overcompenseren voor gem
 De detectiekans zal lager zijn voor deze plot, maar dat wil zeggen dat we hierdoor juist sterker gaan compenseren.
 Stel dat we bij de huizen maar 1 vogel zien, maar de detectiekans is ook super laag, zal het "model" daar juist voor compenseren en bv. zeggen dat er in werkelijkheid 10 zitten, terwijl dat waarschijnlijk niet realistisch is. Het probleem is dat we de assumptie van uniforme verdeling schaden want in de 30 % bos/huizen zitten niet evenveel dieren als in de 70% akker. Of je detectiekans nu laag of hoog is, ze zal compenseren zodat de volledige abundantie is geschat over de plot. Dingen als bos, huizen ... zijn belangrijke elementen in het Vlaamse landschap dus ervan uitgaan dat de dieren uniform verdeeld zijn in plots waar er overlap is met dergelijke elementen zou de impact van bos, huizen ... op densiteiten van akkervogels verwaarlozen.  
   
-**Clustering**
+**Clustering**  
 De clustermethode van SOVON wordt niet voor MAS gebruikt wel voor gebiedsdekkende karteringen:  
 *"Tijdens een BMP-bezoek worden doorgaans niet alle individuen opgemerkt, met andere woorden de trefkans is onvolledig. Maar na 5, 6 of 7 bezoeken en clustering kan een betrouwbare schatting van het aantal aanwezige broedparen worden gemaakt. Tijdens een MAS-bezoek van vijf of tien minuten is de trefkans beduidend lager dan bij een BMPbezoek (zie bijvoorbeeld fig. 27a) en zal een kleiner aandeel van de aanwezige individuen worden opgemerkt. Daardoor heeft het bepalen van territoria met behulp van clustering geen zin. Na 2 of 3 MAS-bezoeken zit je met meerdere van deze onvolledige tellingen, waaruit een schatting van het aantal aanwezige individuen moet worden gemaakt."*  
 Zij clusteren o.b.v. 3 criteria die verschillen van soort tot soort:
